Attempt at spacing the modal correctly on Brave Android

--- a/components/ModalElement/modal-element.css
+++ b/components/ModalElement/modal-element.css
@@ -116,8 +116,7 @@ hr {
 }
 
 @media (hover: none) and (pointer: coarse) {
-  .modal-backdrop {
-    align-items: flex-start !important;
-    padding-top: 2rem;
+  .modal-dialog {
+    transform: translateY(1.5rem);
   }
 }
